--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Grant execute permission for gradlew
+        run: cd android && chmod +x gradlew
+
       - name: Build Android Debug
         run: cd android && ./gradlew assembleDebug
