--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,42 @@
-buildscript {
-    ext {
-        buildToolsVersion = "36.0.0"
-        minSdkVersion = 24
-        compileSdkVersion = 36
-        targetSdkVersion = 36
-        ndkVersion = "27.1.12297006"
-        kotlinVersion = "2.1.20"
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+}
+
+android {
+    namespace 'com.example.amineplayer'
+    compileSdk 34
+
+    defaultConfig {
+        applicationId "com.example.amineplayer"
+        minSdk 24
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
     }
-    repositories {
-        google()
-        mavenCentral()
+
+    buildTypes {
+        release {
+            isMinifyEnabled = false
+        }
+        debug {
+            // debug settings
+        }
     }
-    dependencies {
-        classpath("com.android.tools.build:gradle")
-        classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
     }
 }
 
-apply plugin: "com.facebook.react.rootproject"
+dependencies {
+    implementation ("org.jetbrains.kotlin:kotlin-stdlib:1.9.10")
+    implementation ('androidx.core:core-ktx:1.12.0')
+    implementation ('androidx.appcompat:appcompat:1.7.0')
+    implementation ('com.google.android.material:material:1.11.0')
+}
