--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,43 @@
-// ملف build.gradle ديال المشروع كامل (Project-level)
-buildscript {
-    ext.kotlin_version = "1.9.10"
-    repositories {
-        google()
-        mavenCentral()
+
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+}
+
+android {
+    namespace 'com.example.amineplayer'
+    compileSdk 34
+
+    defaultConfig {
+        applicationId "com.amine.tst"
+        minSdk 24
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
     }
-    dependencies {
-        classpath "com.android.tools.build:gradle:8.3.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+    buildTypes {
+        release {
+            isMinifyEnabled = false
+        }
+        debug {
+            // debug settings
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
+dependencies {
+    implementation ("org.jetbrains.kotlin:kotlin-stdlib:1.9.10")
+    implementation ('androidx.core:core-ktx:1.12.0')
+    implementation ('androidx.appcompat:appcompat:1.7.0')
+    implementation ('com.google.android.material:material:1.11.0')
 }
