--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,19 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
-
-android {
-    namespace 'com.example.amineplayer'
-    compileSdk 34
-
-    defaultConfig {
-        applicationId "com.example.amineplayer"
-        minSdk 24
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
+// ملف build.gradle ديال المشروع كامل (Project-level)
+buildscript {
+    ext.kotlin_version = "1.9.10"
+    repositories {
+        google()
+        mavenCentral()
     }
-
-    buildTypes {
-        release {
-            isMinifyEnabled = false
-        }
-        debug {
-            // debug settings
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-
-    kotlinOptions {
-        jvmTarget = '17'
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.3.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
-dependencies {
-    implementation ("org.jetbrains.kotlin:kotlin-stdlib:1.9.10")
-    implementation ('androidx.core:core-ktx:1.12.0')
-    implementation ('androidx.appcompat:appcompat:1.7.0')
-    implementation ('com.google.android.material:material:1.11.0')
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
