--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -18,7 +17,7 @@ android {
 
     buildTypes {
         release {
-            isMinifyEnabled = false
+            minifyEnabled = false
         }
         debug {
             // debug settings
@@ -36,8 +35,8 @@ android {
 }
 
 dependencies {
-    implementation ("org.jetbrains.kotlin:kotlin-stdlib:1.9.10")
-    implementation ('androidx.core:core-ktx:1.12.0')
-    implementation ('androidx.appcompat:appcompat:1.7.0')
-    implementation ('com.google.android.material:material:1.11.0')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.11.0'
 }
