--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: output-apk
-          path: app/build/outputs/apk/debug/output-apk.apk
+          path: app/build/outputs/apk/debug/*.apk
+
